--- a/_posts/20200704-music.md
+++ b/_posts/20200704-music.md
@@ -1,8 +1,7 @@
 ---
-title: MM32-eMiniBoard系列music例程
+title: 【MM32】eMiniBoard 系列 music 例程
 date: 2020-07-04 21:00:00
 tags: 
-- eMiniBoard
 - Cortex-M
 - music
 categories:
@@ -26,13 +25,13 @@ categories:
 - 非播放状态时 <kbd>LED 1 ~ LED 4</kbd> 跑马灯）
 - <kbd>LED 1</kbd>闪烁：播放歌曲 1
 - <kbd>LED 2</kbd>闪烁：播放歌曲 2
-- <kbd>LED 3</kbd>闪烁：长音模式
+- <kbd>LED 3</kbd>闪烁：短音模式
 - <kbd>LED 4</kbd>闪烁：循环模式
 
 3. RV * `3`：调节音量
 
 ## 准备工作
-==注：本文所有程序均基于 IAR EWARM 开发==
+**注：本文所有程序均基于 IAR EWARM 开发**
 
 1.官网下载 [MM32-FDS](http://www.mindmotion.com.cn/getfile.aspx?id=1127) 开发套件，支持 MM32 全系列版本，与Cortex-M微控制器软件接口标准(CMSIS)兼容。
 
